[metadata]
name = rockit-jam
version = attr: rockit.core.__version__
# url = https://github.com/heavywatal/pywtl
author = Munehiro Doi
author_email = munepi0713@gmail.com
license_file = LICENSE
description = RockitJam: Rockit start JAMstack!
# long_description = file: README.md

[options]
zip_safe = False
package_dir =
    =src
packages = find_namespace:
install_requires =
    docker
    networkx
#   requests
entry_points = file: entry_points.cfg

[options.packages.find]
where=src

# [options.extras_require]
# doc =
